eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/FCUJob__c.object
<CustomObject>
    <description>To be used by FCU only</description>
    <fields>
        <fullName>A1_Fraud_confirmed_new_case_filed__c</fullName>
        <label>A1 Fraud confirmed, new case filed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A1_Fraud_confirmed_new_case_filed_amt__c</fullName>
        <label>A1 Fraud confirmed, new case filed amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A2_no_fraud_application_rejected__c</fullName>
        <label>A2 no fraud, application rejected</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A2_no_fraud_application_rejected_amt__c</fullName>
        <label>A2 no fraud, application rejected amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional__c</fullName>
        <label>Additional</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_SFDC_id__c</fullName>
        <formula>Opportunity__r.Account.SFDC_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application SFDC id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_customer_address__c</fullName>
        <formula>Opportunity__r.Account.BillingStreet+ &quot;,&quot;+ Opportunity__r.Account.BillingCity+ &quot;,&quot;+   Opportunity__r.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application customer address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_customer_name__c</fullName>
        <formula>Opportunity__r.Account.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application customer name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_customer_previous_address__c</fullName>
        <formula>Opportunity__r.Account.ShippingStreet+ &quot;,&quot;+ Opportunity__r.Account.ShippingCity+ &quot;,&quot;+ Opportunity__r.Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application customer previous address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_date_of_birth__c</fullName>
        <formula>Opportunity__r.Account.Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application customer date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_product__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIFAS_details__c</fullName>
        <label>CIFAS details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIFAS_from__c</fullName>
        <label>CIFAS from</label>
        <picklist>
            <picklistValues>
                <fullName>FCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Al Rayan Branch Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Al Rayan Head Office Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIFAS_match__c</fullName>
        <label>CIFAS match</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIFAS_match_to_our_customer__c</fullName>
        <label>CIFAS match to our customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIFAS_reason_reported__c</fullName>
        <label>CIFAS reason reported</label>
        <picklist>
            <picklistValues>
                <fullName>419 Scam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Conduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccountTakeOver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alias With Adverse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altered cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount Out of Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Inconsistencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogus Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Misuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Not Present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 1 match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 6 Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque Fraud Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compromised ATMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compromised Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counterfeit Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crossfiring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Behaviour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dishonestly retaining a wrongful credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docs - Altered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docs - False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docs - Stolen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Scam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emp - False employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emp - False employment status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emp - False income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CIFAS_reference__c</fullName>
        <label>CIFAS reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_number__c</fullName>
        <label>Card number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_created_by__c</fullName>
        <formula>Case__r.CreatedBy.FirstName + &quot; &quot;+ Case__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case created by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_amount__c</fullName>
        <label>Chargeback amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_if_CIFAS_match_to_our_customer__c</fullName>
        <label>Comments if CIFAS match to our customer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consent_granted_date__c</fullName>
        <label>Consent granted date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_granted_reference__c</fullName>
        <label>Consent granted reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_required__c</fullName>
        <label>Consent required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_address__c</fullName>
        <label>Contact address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_email_address__c</fullName>
        <label>Contact email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_fax__c</fullName>
        <label>Contact fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_name__c</fullName>
        <label>Contact name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_telephone_number__c</fullName>
        <label>Contact telephone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Court_address__c</fullName>
        <label>Court address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Court_contact_details__c</fullName>
        <label>Court contact details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Court_name__c</fullName>
        <label>Court name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_reference__c</fullName>
        <label>Court reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_status__c</fullName>
        <label>Court status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_liability_amount__c</fullName>
        <label>Customer liability amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Reviewed__c</fullName>
        <label>Date Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_follow_up__c</fullName>
        <label>Date for follow up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_trial_or_court_case__c</fullName>
        <label>Date of trial or court case</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_reported_to_NCA__c</fullName>
        <label>Date reported to NCA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_time_completed__c</fullName>
        <label>Date/time completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_time_recieved__c</fullName>
        <label>Date/time received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_witness_statement_received__c</fullName>
        <label>Date witness statement sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_witness_statement_requested__c</fullName>
        <label>Date witness statement requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_1_refund_comments__c</fullName>
        <label>Day 1 refund comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_comments__c</fullName>
        <label>Decision comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diarised_closure_date__c</fullName>
        <label>Diarised closure date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <formula>Prospect_Customer__r.EBS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Type__c</fullName>
        <label>Fraud Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Takeover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compromised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contactless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courier Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impersonation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost/Stolen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phishing/vishing/smishing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <picklist>
            <picklistValues>
                <fullName>Abbey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abbey Fraud Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABN AMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acton Police Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance and Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APS (Advanced Payment Solutions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armstrong Solicitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Freezing Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Constabulary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Of Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barclays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barclays Cheque Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barnet Borough Police Station - Collindale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barnet London Borough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedfordshire Constabulary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham City Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham CTU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham Midshires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Border &amp; Immigration Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brighton &amp; Hove City Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British High Commission Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Transport Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bury Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridgeshire Constabulary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameron McKenna LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ch Hausmann &amp; Co</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_reported_to_NCA__c</fullName>
        <label>Have you reported to NCA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_you_unblocked_the_card__c</fullName>
        <label>Have you unblocked the card?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High risk?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Joint_Prospect_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Joint Prospect/Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs (Joint Prospect/Customer)</relationshipLabel>
        <relationshipName>Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Justified__c</fullName>
        <label>Justified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loaded_to_CIFAS__c</fullName>
        <label>Loaded to CIFAS</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_amount__c</fullName>
        <label>Loss amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_advisor__c</fullName>
        <label>Name of advisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_entities__c</fullName>
        <label>Number of entities</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_individuals__c</fullName>
        <label>Number of individuals</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_positive_matches__c</fullName>
        <label>Number of positive matches</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_type__c</fullName>
        <label>Order type</label>
        <picklist>
            <picklistValues>
                <fullName>Arrestment of Funds Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities Act 1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities Act 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Abduction and Custody Act 1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Maintances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Support Information Regulations 2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children Act 1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children Act 1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children Act 1991 Section 32E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confiscation Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Protection from Unfair trading Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crime (int. Co-op) Act 2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disclosure Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPA Section 28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPA Section 29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPA Section 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPA Section 35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACT 2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud Act 2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freezing Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump sum deduction order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIAA 2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIAA 2002 (136)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POCA 2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POCA 2002, Section 345</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overseas_address__c</fullName>
        <label>Overseas address</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PEP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_amount__c</fullName>
        <label>Payment amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_status__c</fullName>
        <label>Decision Payment</label>
        <picklist>
            <picklistValues>
                <fullName>FCU checks completed: no concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further information required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_type__c</fullName>
        <label>Payment type</label>
        <picklist>
            <picklistValues>
                <fullName>Payment To High Risk Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watchlist transfers &amp; transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finscan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Cash Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Cash Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Payment - FX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Victim__c</fullName>
        <label>Primary Victim</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer1__c</fullName>
        <formula>IF(RecordType.Name = &quot;Application&quot;,  Application_customer_name__c  , Customer_Account__r.Primary_SFDC_Account__r.FullName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect/Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect/Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>